frame/support/test/tests/pallet_ui/hooks_invalid_item.rs
#[frame_support::pallet]
mod pallet {
	use frame_support::pallet_prelude::Hooks;

	#[pallet::config]
	pub trait Config: frame_system::Config {}

	#[pallet::pallet]
	pub struct Pallet<T>(_);

	#[pallet::hooks]
	impl<T: Config> Hooks for Pallet<T> {}

	#[pallet::call]
	impl<T: Config> Pallet<T> {}
}

fn main() {
}
